--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -8,8 +8,12 @@
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
+    "passport": "^0.4.0",
     "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "request": "~2.83.0",
+    "sessions": "^0.0.2-7"
   }
 }
