--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "simple-oauth2": "^2.2.1"
   },
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && yarn install && yarn start"
   }
 }
