--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
+  "name": "capstone",
+  "version": "1.0.0",
+  "repository": "https://github.com/scottafraser/capstone.git",
+  "author": "Scott Fraser <scottafraser@yahoo.com>",
+  "license": "MIT",
   "dependencies": {
-    "simple-oauth2": "^2.2.1"
+    "babel-cli": "^6.26.0",
+    "concurrently": "^4.0.1"
   },
   "scripts": {
-    "heroku-postbuild": "cd client && yarn install && yarn start"
+    "install": "(cd client && yarn) && (cd auth-server && yarn)",
+    "start": "concurrently \"cd client && PORT=3000 yarn start\" \"cd auth-server && PORT=8888 yarn start\"",
+    "build": "concurrently \"cd client && yarn build\" \"cd auth-server && yarn build\"",
+    "start:prod": "cd auth-server && yarn start:prod",
+    "heroku-postbuild": "yarn build"
+  },
+  "engines": {
+    "node": "8.11.3"
   }
 }
