--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -1,9 +1,13 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
+  "author": "Spotify Node",
+  "name": "server",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
@@ -15,5 +19,14 @@
     "querystring": "~0.2.0",
     "request": "~2.83.0",
     "sessions": "^0.0.2-7"
+  },
+  "devDependencies": {
+    "babel-register": "^6.26.0",
+    "nodemon": "^1.18.5"
+  },
+  "scripts": {
+    "start": "nodemon -r babel-register authorization_code/app.js",
+    "build": "babel . --ignore node_modules,build --out-dir build",
+    "start:prod": "node build/authorization_code/app.js"
   }
 }
